fix(config): validate controls after mod startup